Fix login/register jump

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -262,6 +262,7 @@ body {
 .flex { display: flex; }
 .flex-col { display: flex; flex-direction: column; }
 .flex-center { display: flex; align-items: center; justify-content: center; }
+.flex-start { display: flex; align-items: flex-start; justify-content: center; }
 .flex-between { display: flex; align-items: center; justify-content: space-between; }
 .flex-align { display: flex; align-items: center; }
 .flex-wrap { display: flex; flex-wrap: wrap; }
